fix(simulator): fixed an error in icon rendering making it too large for the button

--- a/apps/client/src/app/pages/simulator/components/action/action.component.less
+++ b/apps/client/src/app/pages/simulator/components/action/action.component.less
@@ -27,6 +27,11 @@
       opacity: .6;
     }
 
+    .action-icon {
+      height: 40px;
+      width: 40px;
+    }
+
     &.not-enough-cp {
       .cost {
         position: absolute;
